Added example for table template

--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -14,8 +14,10 @@
 		<br /> <br />
 		<h2>EXAMPLES:</h2>
 		<br />
-		<a href="/download/TestDocument">Download template example</a>
-		<br /> <br /> 
+		<a href="/download/TestDocument">Download basic template example</a>
+		<br /> 
+		<a href="/download/TableDocument">Download table template example</a>
+		<br /> 
 		<fieldset>
 		    <legend>XML example:</legend>
 <pre>&lt;name&gt;Java Honk NM&lt;/name&gt;
